--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$animation-speed: 0.3s;
+$color-green: #1a5a4c;
+$subitle-color: #687480;
+$title-color: #0f0e08;
