--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,48 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: Montserrat;
+  font-weight: 400;
   font-style: normal;
+  src: url('./../fonts/Montserrat-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Montserrat;
+  font-weight: 700;
+  font-style: normal;
+  src: url('./../fonts/Montserrat-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IBMPlexSans;
+  font-weight: 300;
+  font-style: normal;
+  src: url('./../fonts/IBMPlexSans-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IBMPlexSans;
+  font-weight: 400;
+  font-style: normal;
+  src: url('./../fonts/IBMPlexSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IBMPlexSans;
+  font-weight: 500;
+  font-style: normal;
+  src: url('./../fonts/IBMPlexSans-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IBMPlexSans;
+  font-weight: 600;
+  font-style: normal;
+  src: url('./../fonts/IBMPlexSans-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IBMPlexSans;
+  font-weight: 700;
+  font-style: normal;
+  src: url('./../fonts/IBMPlexSans-Bold.ttf') format('truetype');
 }
