--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$icon-width: 24px;
+$icon-heigth: 24px;
+$green-accent: #1A5A4C;
+$white-accent: #FFF;
+$title-font: 'Montserrat', sans-serif;
+$subtitle-font:  'IBMPlexSans', sans-serif;
