--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
 @import 'fonts';
-@import 'typography';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/nav';
+@import 'blocks/menu';
+@import 'blocks/art-museum';
+@import 'blocks/events';
+@import 'blocks/event';
+@import 'blocks/art-periods';
+@import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
+@import 'blocks/schedule';
+@import 'blocks/contacts';
+@import 'blocks/button-scroll';
 
-body {
-  background: $c-gray;
-}
