--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -35,9 +35,15 @@
   &__phone,
   &__fax,
   &__email {
+    display: inline-block;
     text-decoration: none;
     color: #0F0E08;
     cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
 
