--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -1,8 +1,7 @@
 .event {
-  width: 280px;
 
   @media (min-width: 768px) {
-    width: 700px;
+    min-width: 700px;
   }
 
   @media (min-width: 1280px) {
@@ -14,7 +13,7 @@
 
   &__img {
     width: 100%;
-    height: 210px;
+    min-height: 210px;
     margin-bottom: 40px;
 
     @media (min-width: 768px) {
