--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -24,4 +24,11 @@
     font-weight: 400;
     line-height: 150%;
   }
+
+  &__link {
+    color: inherit;
+    text-decoration: none;
+
+    @include hover(transform, scale(1.1));
+  }
 }
