--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,8 +3,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 35%;
   background-color: $green-color;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   color: #fff;
@@ -12,22 +13,24 @@
   z-index: 1000;
   visibility: hidden;
   opacity: 0;
-  transition: all 0.3s ease-in-out;
+  transform: translateY(-10px);
+  transition:
+    opacity 0.3s ease-in-out,
+    visibility 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   &:target {
-    display: flex;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-    flex-direction: column;
+    transform: translateY(0);
 
     @include content-padding-inline;
 
     @include on-tablet {
-      height: auto;
+      min-height: 255px;
       padding: 20px;
-      justify-content: center;
       flex-direction: row;
     }
 
@@ -38,22 +41,53 @@
 
   &-wrapper {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    width: 100%;
-    align-items: start;
-    gap: 40px;
-    align-self: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 50%;
+    gap: 28px;
 
     @include on-tablet {
-      flex-direction: row;
       justify-content: center;
       align-items: center;
-      gap: 0;
+    }
+  }
+
+  &-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: flex-start;
+    gap: 20px;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      list-style: none;
+      padding: 10px;
+
+      a {
+        text-decoration: none;
+        color: #fff;
+        font-family: $font-primary;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 100%;
+        transition:
+          color 0.3s ease,
+          transform 0.2s ease;
+
+        &:hover {
+          text-decoration: underline;
+          transform: translateY(-2px);
+        }
+      }
     }
   }
 
   &-icon-close {
+    display: block;
     padding: 10px;
     text-align: right;
     align-self: flex-start;
@@ -68,13 +102,17 @@
   &-hours {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 20px;
-    align-items: start;
+    border-top: 1px solid #fff;
 
     @include on-tablet {
       flex-direction: row;
-      justify-content: center;
+      justify-content: space-between;
+      align-items: flex-start;
+      border-left: 1px solid #fff;
+      border-top: none;
+      padding: 0 24px;
+      margin: 0 24px;
     }
 
     &-schedule {
@@ -107,66 +145,14 @@
       max-width: 170px;
       padding: 10px;
 
+      @include on-tablet {
+        padding-left: 0;
+      }
+
       p {
         margin: 10px 0;
         color: #fff;
       }
-    }
-  }
-
-  &-nav {
-    display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    gap: 20px;
-    justify-content: space-between;
-
-    &-item {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      list-style: none;
-      padding: 10px;
-
-      a {
-        text-decoration: none;
-        color: #fff;
-        font-family: $font-primary;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 100%;
-        transition:
-          color 0.3s ease,
-          transform 0.2s ease;
-
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-
-  &-link {
-    text-decoration: none;
-    color: #fff;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  &-separator {
-    width: 70%;
-    height: 1px;
-    background-color: #fff;
-    margin: 24px;
- align-items: center;
-
-
-    @include on-tablet {
-      width: 1px;
-      height: 70%;
-      margin: 0 24px;
     }
   }
 }
