--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -2,5 +2,57 @@
   transition: #{$_property} 0.3s;
   &:hover {
     #{$_property}: $_toValue;
+    cursor: pointer;
+  }
+}
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-small-desktop {
+  @media (min-width: $small-desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin on-large-desktop {
+  @media (min-width: $the-design-width) {
+    @content;
+  }
+}
+
+@mixin content-space-inline {
+  margin: 0;
+  padding-inline: 20px;
+
+  @include on-small-desktop {
+    padding-inline: 34px;
+  }
+
+  @include on-large-desktop {
+    max-width: 1440px;
+    margin-inline: auto;
+    padding-inline: 55px;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-small-desktop {
+    --columns: 6;
+
+    column-gap: 30px;
+  }
+
+  @include on-large-desktop {
+    --columns: 12;
   }
 }
