--- a/src/styles/header-blocks/form.scss
+++ b/src/styles/header-blocks/form.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin: 0;
   padding: 0;
+  z-index: 0;
 
   @include on-large-desktop {
     margin-left: 200px;
@@ -14,6 +15,7 @@
     width: 230px;
     height: 50px;
     border: 1px solid #1a5a4c;
+    cursor: pointer;
 
     @include on-small-desktop {
       width: 200px;
@@ -41,9 +43,7 @@
     height: 50px;
     background-color: #1a5a4c;
 
-    &:hover {
-      cursor: pointer;
-    }
+    @include hover(transform, scale(1.1));
 
     @include on-small-desktop {
       width: 70px;
@@ -52,8 +52,9 @@
 
     &--img {
       display: block;
-      width: 24px;
-      height: 24px;
+      padding: 15px;
+      width: 55px;
+      height: 55px;
 
       @include hover(transform, scale(1.5));
     }
