--- a/src/styles/header-blocks/menu.scss
+++ b/src/styles/header-blocks/menu.scss
@@ -1,8 +1,15 @@
 .menu {
   display: block;
-  background-color: #1a5a4c;
+  background-color: rgba(0, 0, 0, 0.5);
 
-  overflow: hidden;
+  &__green {
+    display: block;
+    width: 100%;
+    height: fit-content;
+    margin: 0;
+    padding: 0;
+    background-color: #1a5a4c;
+  }
 
   &__content {
     display: flex;
