--- a/src/styles/main-blocks/form-2.scss
+++ b/src/styles/main-blocks/form-2.scss
@@ -5,6 +5,7 @@
     width: 230px;
     height: 50px;
     padding: 18px 24px;
+    cursor: pointer;
 
     &::placeholder {
       font-family: Montserrat, sans-serif;
@@ -50,15 +51,13 @@
       height: 70px;
     }
 
-    &:hover {
-      cursor: pointer;
-    }
+    @include hover(transform, scale(1.1));
 
     &--img {
       display: block;
-      width: 35px;
-      height: 35px;
-      padding: 10px;
+      width: 55px;
+      height: 55px;
+      padding: 20px;
 
       @include hover(transform, scale(1.5));
     }
