--- a/src/styles/main-blocks/slider.scss
+++ b/src/styles/main-blocks/slider.scss
@@ -33,6 +33,7 @@
     background-image: url(../images/slider/slider-slider.png);
     background-position: center;
     background-size: contain;
+    border: 1px solid #1a5a4c;
 
     @include on-small-desktop {
       width: 700px;
