--- a/src/styles/header-blocks/bg.scss
+++ b/src/styles/header-blocks/bg.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  z-index: 0;
 
   @include on-small-desktop {
     background-image: url(../images/header-bg-desktop.png);
