--- a/src/styles/main-blocks/from-to.scss
+++ b/src/styles/main-blocks/from-to.scss
@@ -9,8 +9,23 @@
   &__image {
     display: flex;
     width: 100%;
+    height: 210px;
     margin: 0;
     padding: 0;
+    background-image: url(../images/actuals/from-to.png);
+    background-position: center, top(10px);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include on-small-desktop {
+      height: 390px;
+      background-image: url(../images/actuals/from-to-dskt.png);
+      background-position: center;
+    }
+
+    @include on-large-desktop {
+      height: 550px;
+    }
   }
 
   &__content {
