--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -13,9 +13,7 @@
 
   &__menu {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
 
     transition: all 0.3s;
     opacity: 0;
