--- a/src/styles/main-blocks/slider.scss
+++ b/src/styles/main-blocks/slider.scss
@@ -16,6 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   margin: 0;
   padding: 0;
   gap: 20px;
@@ -28,7 +29,7 @@
     display: block;
     margin: 0;
     padding: 0;
-    width: 280px;
+    width: 100%;
     height: 410px;
     background-image: url(../images/slider/slider-slider.png);
     background-position: center;
@@ -36,12 +37,10 @@
     border: 1px solid #1a5a4c;
 
     @include on-small-desktop {
-      width: 700px;
       height: 543px;
     }
 
     @include on-large-desktop {
-      width: 1330px;
       height: 990px;
     }
   }
