--- a/src/styles/main-blocks/slider.scss
+++ b/src/styles/main-blocks/slider.scss
@@ -26,22 +26,93 @@
   }
 
   &__content {
-    display: block;
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 410px;
-    background-image: url(../images/slider/slider-slider.png);
-    background-position: center;
-    background-size: contain;
-    border: 1px solid #1a5a4c;
 
-    @include on-small-desktop {
-      height: 543px;
-    }
+    @include page-grid;
 
     @include on-large-desktop {
-      height: 990px;
+      gap: 30px;
+    }
+  }
+
+  &__images{
+    margin: 0;
+    padding: 0;
+
+    &--1{
+      display: block;
+      width: 280px;
+      height: 410px;
+      grid-column: 1/-1;
+      justify-self: center;
+
+      @include on-small-desktop{
+        grid-column: 1/4;
+        height: 543px;
+        width: 340px;
+        justify-self: right;
+      }
+
+      @include on-large-desktop{
+        grid-column: span 4;
+        width: 100%;
+        height: 600px;
+        object-position: center;
+      }
+    }
+
+    &--2{
+      display: none;
+
+      @include on-large-desktop{
+        display: block;
+        grid-column: span 8;
+        height: 600px;
+        width: 100%;
+        object-position: center;
+      }
+    }
+
+    &--3{
+      display: none;
+
+      @include on-large-desktop{
+        display: block;
+        grid-column: span 8;
+        height: 360px;
+        width: 100%;
+        object-position: center;
+      }
+    }
+
+    &--4{
+      display: none;
+
+      @include on-large-desktop{
+        display: block;
+        grid-column: span 4;
+        height: 360px;
+        width: 100%;
+        object-position: center;
+      }
+    }
+
+    &--5{
+      display: none;
+
+      @include on-small-desktop{
+        display: block;
+        grid-column: 4/6;
+        height: 543px;
+        width: 340px;
+        object-position: center;
+      }
+
+      @include on-large-desktop{
+        display: none;
+      }
     }
   }
 }
