implement suggested changes

--- a/src/styles/footer-blocks/footer.scss
+++ b/src/styles/footer-blocks/footer.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   padding-block: 50px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     padding-block: 51px 36px;
   }
 
@@ -22,7 +22,7 @@
     gap: 40px;
     margin-bottom: 80px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       flex-direction: row;
       padding-right: 120px;
       margin-bottom: 120px;
@@ -41,7 +41,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @include on-small-desktop {
+    @include on-tablet {
       flex-direction: column;
       justify-content: flex-start;
       align-items: start;
@@ -86,7 +86,7 @@
     padding-bottom: 70px;
     border-bottom: 1px solid #1a5a4c80;
 
-    @include on-small-desktop {
+    @include on-tablet {
       padding-bottom: 64px;
     }
 
@@ -107,7 +107,7 @@
     padding: 0;
     gap: 30px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 50%;
     }
   }
@@ -131,12 +131,12 @@
       width: 16px;
       height: 16px;
 
-      @include on-small-desktop {
+      @include on-tablet {
         display: none;
       }
     }
 
-    @include on-small-desktop {
+    @include on-tablet {
       display: none;
     }
   }
@@ -150,7 +150,7 @@
     padding: 0;
     gap: 10px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       flex-direction: row;
       justify-content: space-between;
     }
