--- a/src/styles/header-blocks/art-museum.scss
+++ b/src/styles/header-blocks/art-museum.scss
@@ -5,7 +5,7 @@
   padding: 0;
   gap: 20px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     gap: 38px;
     align-items: start;
   }
@@ -18,7 +18,7 @@
     display: block;
     margin-top: 20px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       margin: 0;
     }
 
@@ -29,7 +29,7 @@
     letter-spacing: 0%;
     text-align: center;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 340px;
       font-size: 54px;
       line-height: 120%;
