--- a/src/styles/header-blocks/bg.scss
+++ b/src/styles/header-blocks/bg.scss
@@ -7,7 +7,7 @@
   background-size: cover;
   z-index: 0;
 
-  @include on-small-desktop {
+  @include on-tablet {
     background-image: url(../images/header-bg-desktop.png);
   }
 
@@ -16,7 +16,7 @@
     justify-content: center;
     margin-top: 9px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       justify-content: left;
       margin-top: 15px;
     }
@@ -27,12 +27,12 @@
     width: 55px;
     height: 61px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 220px;
       height: 72px;
     }
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 170px;
     }
   }
