--- a/src/styles/header-blocks/form.scss
+++ b/src/styles/header-blocks/form.scss
@@ -17,7 +17,7 @@
     border: 1px solid #1a5a4c;
     cursor: pointer;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 200px;
       height: 70px;
       padding-left: 68px;
@@ -45,7 +45,7 @@
 
     @include hover(transform, scale(1.1));
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 70px;
       height: 70px;
     }
