--- a/src/styles/header-blocks/header.scss
+++ b/src/styles/header-blocks/header.scss
@@ -24,7 +24,7 @@
     position: absolute;
     top: 27px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       top: 39px;
     }
 
@@ -38,7 +38,7 @@
     width: 100%;
     height: 300px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 50%;
       height: 384px;
     }
@@ -52,7 +52,7 @@
   &__art-museum {
     margin-top: 300px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       margin-top: 127px;
     }
 
