--- a/src/styles/main-blocks/form-2.scss
+++ b/src/styles/main-blocks/form-2.scss
@@ -16,7 +16,7 @@
       color: #687480;
     }
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 374px;
       height: 70px;
       padding: 26px 24px;
@@ -46,7 +46,7 @@
     height: 50px;
     background-color: #f14a27;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 70px;
       height: 70px;
     }
