--- a/src/styles/main-blocks/info.scss
+++ b/src/styles/main-blocks/info.scss
@@ -6,7 +6,7 @@
   align-items: center;
   margin-bottom: 10px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     justify-content: flex-start;
     gap: 30px;
     margin-bottom: 30px;
@@ -23,7 +23,7 @@
     letter-spacing: 0%;
     color: #687480;
 
-    @include on-small-desktop {
+    @include on-tablet {
       font-size: 14px;
     }
   }
@@ -39,7 +39,7 @@
     letter-spacing: 0%;
     color: #1a5a4c;
 
-    @include on-small-desktop {
+    @include on-tablet {
       font-size: 14px;
     }
   }
