--- a/src/styles/main-blocks/section-submit.scss
+++ b/src/styles/main-blocks/section-submit.scss
@@ -9,7 +9,7 @@
   background-size: cover;
   padding-block: 88px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     padding-block: 82px;
     background-image: url(../images/submit-bg-dskt.png);
   }
@@ -31,7 +31,7 @@
     text-align: center;
     color: #fff;
 
-    @include on-small-desktop {
+    @include on-tablet {
       margin-bottom: 64px;
     }
 
@@ -45,7 +45,7 @@
     margin: 0;
     padding: 0;
 
-    @include on-small-desktop {
+    @include on-tablet {
       gap: 16px;
     }
 
