--- a/src/styles/main-blocks/action.scss
+++ b/src/styles/main-blocks/action.scss
@@ -1,7 +1,7 @@
 .action {
   margin-bottom: 60px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     margin-bottom: 64px;
   }
 
@@ -30,7 +30,7 @@
     width: 100%;
     margin-bottom: 20px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       margin-bottom: 40px;
     }
 
@@ -50,7 +50,7 @@
     gap: 15px;
     margin-bottom: 10px;
 
-    @include on-small-desktop {
+    @include on-tablet {
       gap: 20px;
       margin-bottom: 15px;
     }
@@ -68,7 +68,7 @@
     letter-spacing: 0%;
     color: #0f0e08;
 
-    @include on-small-desktop {
+    @include on-tablet {
       font-size: 36px;
     }
   }
@@ -79,7 +79,7 @@
     height: 10px;
     background-color: #f14a27;
 
-    @include on-small-desktop {
+    @include on-tablet {
       width: 15px;
       height: 15px;
     }
