--- a/src/styles/main-blocks/slider.scss
+++ b/src/styles/main-blocks/slider.scss
@@ -2,7 +2,7 @@
   padding-block: 30px 100px;
   width: 100%;
 
-  @include on-small-desktop {
+  @include on-tablet {
     padding-block: 0 92px;
   }
 
@@ -21,7 +21,7 @@
   padding: 0;
   gap: 20px;
 
-  @include on-small-desktop {
+  @include on-tablet {
     gap: 32px;
   }
 
@@ -37,25 +37,25 @@
     }
   }
 
-  &__images{
+  &__images {
     margin: 0;
     padding: 0;
 
-    &--1{
+    &--1 {
       display: block;
       width: 280px;
       height: 410px;
       grid-column: 1/-1;
       justify-self: center;
 
-      @include on-small-desktop{
+      @include on-tablet {
         grid-column: 1/4;
         height: 543px;
         width: 340px;
         justify-self: right;
       }
 
-      @include on-large-desktop{
+      @include on-large-desktop {
         grid-column: span 4;
         width: 100%;
         height: 600px;
@@ -63,10 +63,10 @@
       }
     }
 
-    &--2{
+    &--2 {
       display: none;
 
-      @include on-large-desktop{
+      @include on-large-desktop {
         display: block;
         grid-column: span 8;
         height: 600px;
@@ -75,10 +75,10 @@
       }
     }
 
-    &--3{
+    &--3 {
       display: none;
 
-      @include on-large-desktop{
+      @include on-large-desktop {
         display: block;
         grid-column: span 8;
         height: 360px;
@@ -87,10 +87,10 @@
       }
     }
 
-    &--4{
+    &--4 {
       display: none;
 
-      @include on-large-desktop{
+      @include on-large-desktop {
         display: block;
         grid-column: span 4;
         height: 360px;
@@ -99,10 +99,10 @@
       }
     }
 
-    &--5{
+    &--5 {
       display: none;
 
-      @include on-small-desktop{
+      @include on-tablet {
         display: block;
         grid-column: 4/6;
         height: 543px;
@@ -110,7 +110,7 @@
         object-position: center;
       }
 
-      @include on-large-desktop{
+      @include on-large-desktop {
         display: none;
       }
     }
