add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/utils';
+@import './blocks/fonts';
+@import './blocks/typography';
+@import './blocks/html';
+@import './blocks/header';
+@import './blocks/baseline-menu';
+@import './blocks/page__menu';
+@import './blocks/tickets';
+@import './blocks/main';
+@import './blocks/footer-0';
+@import './blocks/footer-1';
