--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -63,7 +63,7 @@
 
     grid-column: span 2;
     padding: 40px 0 70px;
-    border-top: 1px solid #1A5A4C80;
+    border-top: 1px solid #1a5a4c80;
     color: $text-primary;
 
     @include on-tablet {
@@ -76,16 +76,15 @@
       padding: 0;
       border-top: none;
 
-
       &::before {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
         bottom: 74px;
         left: -65px;
         width: 1px;
-        background-color: #1A5A4C80;
+        background-color: #1a5a4c80;
       }
     }
   }
