--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,10 +4,10 @@ $tablet-min-width: 768px;
 $desktop-small-min-width: 1024px;
 $desktop-min-width: 1280px;
 $effectDuration: 0.3s;
-$primary-green: #1A5A4C;
-$primary-red: #F14A27;
-$text-primary: #0F0E08;
+$primary-green: #1a5a4c;
+$primary-red: #f14a27;
+$text-primary: #0f0e08;
 $text-secondary: #1d1d1d;
 $text-muted: #c2c2c2;
-$text-grey: #4E4E4E;
+$text-grey: #4e4e4e;
 $text-light-grey: #687480;
