--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,4 +1,18 @@
-body, div, h1, h2, h3, h4, h5, p, a, ol, ul, input, textarea, button, section {
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+a,
+ol,
+ul,
+input,
+textarea,
+button,
+section {
   margin: 0;
   padding: 0;
   border: 0;
@@ -7,6 +21,8 @@ body, div, h1, h2, h3, h4, h5, p, a, ol, ul, input, textarea, button, section {
   list-style: none;
 }
 
-input, textarea, button {
+input,
+textarea,
+button {
   outline: none;
 }
