new fixed version

--- a/src/styles/main-blocks/action.scss
+++ b/src/styles/main-blocks/action.scss
@@ -1,5 +1,6 @@
 .action {
   margin-bottom: 60px;
+  width: 100%;
 
   @include on-tablet {
     margin-bottom: 64px;
@@ -22,8 +23,9 @@
     }
   }
 
-  &__image {
+  &__images {
     display: block;
+    object-fit: contain;
     margin: 0;
     padding: 0;
     grid-column: 1/-1;
@@ -40,6 +42,11 @@
     }
 
     @include hover(transform, scale(1.05));
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
   }
 
   &__name {
@@ -95,5 +102,13 @@
     line-height: 150%;
     letter-spacing: 0%;
     color: #4e4e4e;
+
+    @include on-tablet {
+      width: 460px;
+    }
+
+    @include on-large-desktop {
+      width: 100%;
+    }
   }
 }
