--- a/src/styles/main-blocks/slider.scss
+++ b/src/styles/main-blocks/slider.scss
@@ -51,7 +51,7 @@
       @include on-tablet {
         grid-column: 1/4;
         height: 543px;
-        width: 340px;
+        width: 349px;
         justify-self: right;
       }
 
@@ -104,10 +104,11 @@
 
       @include on-tablet {
         display: block;
-        grid-column: 4/6;
+        grid-column: 4/-1;
         height: 543px;
         width: 340px;
         object-position: center;
+        justify-self: left;
       }
 
       @include on-large-desktop {
