--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -46,7 +46,7 @@
   column-gap: 20px;
   grid-template-columns: repeat(var(--columns), 1fr);
 
-  @include on-small-desktop {
+  @include on-tablet {
     --columns: 6;
 
     column-gap: 30px;
