completed header & menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './helpers/container';
 
-body {
-  background: $c-gray;
-}
+// blocks
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/top-bar';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/section-button';
+@import 'blocks/schedule';
