--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
+// breakpoints
+$mobile-min-width: 320px;
+$tablet-min-width: 640px;
+$desctop-min-width: 1280px;
+$large-desctop-min-width: 1440px;
+
+// font size
+$root-font-size: 16px;
+
+// colors
 $c-gray: #eee;
+$button-border-color: #1a5a4c;
+$menu-bg-color: #1a5a4c;
+$menu-text-color: #fff;
