--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,29 @@
+// @font-face {
+//   font-family: Roboto, Arial, Helvetica, sans-serif;
+//   src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
+  font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v29/JTUQjIg1_i6t8kCHKm459WxRxC7mw9c.woff2)
+    format('woff2');
+  unicode-range:
+    U+0460-052F, U+1C80-1C8A, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
+  font-weight: 100 700;
+  font-style: normal;
+  font-display: swap;
+  font-stretch: 100%;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v21/zYXxKVElMYYaJe8bpLHnCwDKhdTEG46kmUZQCX598fQbGYnYALZg.woff2)
+    format('woff2');
+  unicode-range:
+    U+0460-052F, U+1C80-1C8A, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
