--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
+  /* stylelint-disable-next-line font-family-name-quotes */
+  font-family: 'Montserrat', 'IBM Plex Sans', Arial, Helvetica, sans-serif;
   src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
