completed evets`s section

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -16,6 +16,15 @@
 
   &__title {
     @extend %h1;
+
+    @include on-tablet {
+      font-size: 3.36rem;
+      line-height: 120%;
+    }
+
+    @include on-desktop {
+      font-size: 4.5rem;
+    }
   }
 
   &__right {
@@ -33,7 +42,7 @@
       background-image: url(../images/Header-right-tb-img.png);
     }
 
-    @include on-desctop {
+    @include on-desktop {
       grid-column: span 7;
       background-image: url(../images/Header-right-dt-img.png);
     }
@@ -53,7 +62,7 @@
       margin-right: 0;
     }
 
-    @include on-desctop {
+    @include on-desktop {
       grid-column: span 5;
     }
   }
