--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -10,31 +10,31 @@
   }
 }
 
-@mixin on-desctop {
-  @media (min-width: $desctop-min-width) {
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
     @content;
   }
 }
 
-@mixin on-large-desctop {
-  @media (min-width: $large-desctop-min-width) {
+@mixin on-large-desktop {
+  @media (min-width: $large-desktop-min-width) {
     @content;
   }
 }
 
 @mixin content-padding-inline() {
-  margin: 0 20px;
+  margin-inline: 20px;
 
   @include on-tablet {
     margin: 0 39px;
   }
 
-  @include on-desctop {
+  @include on-desktop {
     margin: 0 55px;
     max-width: 1170px;
   }
 
-  @include on-large-desctop {
+  @include on-large-desktop {
     max-width: 1280px;
   }
 }
@@ -73,7 +73,7 @@
     column-gap: 30px;
   }
 
-  @include on-desctop {
+  @include on-desktop {
     --columns: 12;
   }
 }
