--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,14 +1,19 @@
 // breakpoints
 $mobile-min-width: 320px;
 $tablet-min-width: 640px;
-$desctop-min-width: 1280px;
-$large-desctop-min-width: 1440px;
+$desktop-min-width: 1280px;
+$large-desktop-min-width: 1440px;
 
 // font size
 $root-font-size: 16px;
 
 // colors
+$main-text-color: #0F0E08;
+$card-text-color: #4E4E4E;
 $c-gray: #eee;
 $button-border-color: #1a5a4c;
 $menu-bg-color: #1a5a4c;
 $menu-text-color: #fff;
+$card-dates-color: #1A5A4C;
+$card-additional-element-color: #F14A27;
+$card-lecture-bg-color: #fff;
