--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,7 @@
 @import 'blocks/nav';
 @import 'blocks/section-button';
 @import 'blocks/schedule';
+@import 'blocks/main';
+@import 'blocks/events';
+@import 'blocks/card';
+
