--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,5 +1,6 @@
 .card {
   @include page-grid;
+
   row-gap: 20px;
 
   @include on-tablet {
@@ -10,7 +11,7 @@
     row-gap: 0;
 
     @include on-tablet {
-      @include content-padding-inline();
+      @include content-padding-inline;
     }
 
     @include on-desktop {
@@ -36,8 +37,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 15px;
-
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans ', Roboto, sans-serif;
     grid-column: 1/ -1;
 
     @include on-tablet {
@@ -52,13 +52,13 @@
       position: relative;
       align-items: center;
       grid-column: 1/ -1;
-      box-shadow: 0px 2px 0px 0px #1a5a4c40;
+      box-shadow: 0 2px 0 0 #1a5a4c40;
       background-color: $c-gray;
       padding: 20px 5px;
       row-gap: 25px;
       transform: translateY(-41%);
-      
-      @include content-padding-inline();
+
+      @include content-padding-inline;
 
       @include on-tablet {
         align-items: start;
@@ -89,6 +89,7 @@
 
   &__title {
     @extend %h2;
+
     font-size: 1.75rem;
     font-weight: 400;
     width: fit-content;
