--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,335 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
+.main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 90px;
 }
+
+.actual-events-section {
+  @include max-width-cont;
+  @include grid;
+  row-gap: 60px;
+
+  padding-top: 70px;
+  &__section-title {
+    grid-column: 1 / -1;
+
+    font-family: $second-font;
+    font-size: $mob-sect-title-fs;
+    text-align: center;
+    font-weight: 700;
+
+    @include on-tablet {
+      grid-column: 1 / -3;
+      font-size: $tab-sect-title-fs;
+      text-align: left;
+    }
+  }
+
+  &__event-cont {
+    grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @include on-lap-top {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  &__img {
+    max-width: 280px;
+    max-height: 210px;
+    width: 100%;
+    height: 100%;
+
+    @include transition;
+
+    &:hover {
+      transform: $main-transform-animation;
+    }
+
+
+    @include on-tablet {
+      max-width: 700px;
+      max-height: 520px;
+    }
+
+    @include on-lap-top{
+      max-width: 670px;
+      max-height: 520px;
+    }
+  }
+
+  &__event-date-description-cont {
+    @include on-lap-top {
+      max-width: 370px;
+    }
+  }
+
+  &__event-date-cont {
+    display: flex;
+    justify-content: space-between;
+
+    @include on-tablet {
+      justify-content: flex-start;
+      gap: 27px;
+    }
+  }
+
+  &__event-text {
+    font-weight: 500;
+    color: #687480;
+  }
+
+  &__event-date {
+    font-weight: 700;
+    line-height: 150%;
+    color: $second-color;
+  }
+
+  &__event-description-cont {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    @include on-tablet {
+      padding-top: 15px;
+    }
+  }
+
+  &__event-description-title {
+    font-family: $second-font;
+    font-size: $mob-sect-secondary-title-fs;
+    font-weight: 400;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      background-color: #f14a27;
+      width: 10px;
+      height: 10px;
+      margin-left: 10px;
+      margin-bottom: 2px;
+
+      @include on-tablet {
+        width: 15px;
+        height: 15px;
+      }
+
+    }
+
+    @include on-tablet {
+      font-size: $mob-sect-title-fs;
+    }
+  }
+
+  &__event-description-text {
+    font-weight: 300;
+    line-height: 150%;
+    color: #4e4e4e;
+    margin-top: 15px;
+    @include on-tablet {
+      max-width: 460px;
+    }
+  }
+}
+
+.lection-date-section {
+
+  &__lection-date-cont {
+    position: relative;
+  }
+  &__lection-img {
+    max-width: 320px;
+    width: 100%;
+    height: 100%;
+
+    @include on-tablet {
+      max-width: 768px;
+    }
+
+    @include on-lap-top {
+      max-width: 1280px;
+    }
+  }
+
+  &__lection-cont {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    gap: 15px;
+    background-color: $third-color;
+    top: 60%;
+    left: 6%;
+    max-width: 280px;
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+
+    padding: 24px 0 20px;
+
+    @include on-tablet {
+      max-width: 570px;
+      padding: 45px 55px;
+      left: 13%;
+      top: 65%;
+    }
+
+    @include on-lap-top {
+      padding: 50px 100px;
+      left: 28%;
+      top: 76%;
+    }
+  }
+
+  &__date-cont {
+    display: flex;
+    justify-content: space-around;
+    @include on-tablet {
+      gap: 185px;
+      justify-content: flex-start;
+    }
+
+    @include on-lap-top {
+      gap: 146px;
+    }
+  }
+
+  &__date-text {
+    font-weight: 500;
+    color: #687480;
+  }
+
+  &__date {
+    font-weight: 700;
+    line-height: 150%;
+    color: $second-color;
+  }
+
+  &__lection-title {
+    font-family: $second-font;
+    font-size: $mob-sect-secondary-title-fs;
+    text-align: center;
+    font-weight: 400;
+
+    @include on-tablet {
+      font-size: $mob-sect-title-fs;
+      text-align: left;
+      max-width: 460px;
+    }
+
+    @include on-lap-top {
+      max-width: 370px;
+    }
+  }
+
+}
+
+
+
+.subscribe-section {
+  position: relative;
+  &__subscribe-cont {
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    position: absolute;
+    top: 20%;
+    left: 0%;
+    box-sizing: border-box;
+    padding-inline: 20px;
+
+    @include on-tablet {
+      left: 18%;
+      top: 18%;
+    }
+
+    @include on-lap-top {
+      left: 26%;
+      top: 27%;
+    }
+  }
+
+  &__subscribe-description-cont {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+
+    @include on-tablet {
+      row-gap: 16px;
+    }
+  }
+
+  &__title {
+    font-family: $second-font;
+    font-size: $mob-sect-title-fs;
+    color: $third-color;
+    font-weight: 700;
+    text-align: center;
+
+    @include on-tablet {
+      font-size: $tab-sect-title-fs;
+
+    }
+  }
+
+  &__description {
+    line-height: 150%;
+    color: $third-color;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  &__subscribe-form {
+    display: flex;
+    justify-content: center;
+
+    @include on-tablet {
+      column-gap: 16px;
+    }
+
+    @include on-lap-top {
+      column-gap: 30px;
+    }
+
+  }
+
+  &__email-input {
+    height: 50px;
+    width: 230px;
+    text-indent: 20px;
+
+    @include on-tablet {
+      width: 374px;
+      height: 70px;
+    }
+
+    @include on-lap-top {
+      width: 470px;
+    }
+
+  }
+
+  &__button-input {
+    height: 50px;
+    width: 50px;
+    background-color: #F14A27;
+    @include transition;
+
+    &:hover {
+      background-color: gray;
+      transform: $main-transform-animation;
+    }
+
+    @include on-tablet {
+      height: 70px;
+      width: 70px;
+    }
+  }
+}
+
+
+
+
