--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -25,8 +25,6 @@
       text-align: left;
       row-gap: 62px;
     }
-
-
   }
 
   &__logo-link,
@@ -37,7 +35,6 @@
       transform: $main-transform-animation;
     }
   }
-
 
   &__sites-cont {
     display: flex;
@@ -89,13 +86,12 @@
 
   &__contacts-address,
   &__contacts-tel,
-  &__contacts-email{
+  &__contacts-email {
     text-decoration: none;
     color: $main-color;
 
     &:hover {
       text-decoration: underline;
-
     }
   }
 
@@ -103,40 +99,37 @@
     grid-column: 2 / 3;
     padding-bottom: 25px;
     text-align: right;
+
     @include on-tablet {
       display: none;
     }
   }
 
   &__button-return-link {
-
     box-sizing: border-box;
     padding: 16px 20px;
     border: 1px solid $second-color;
     border-radius: 50%;
   }
-
-
 }
 
 .nav-cont {
-  border-top: 1px solid #1A5A4C;
+  border-top: 1px solid #1a5a4c;
   padding-top: 42px;
   grid-column: 1 / -1;
   column-gap: 36px;
 
   @include grid;
-  padding-inline: 0 !important;
 
+  padding-inline: 0 !important;
 
   @include on-lap-top {
     grid-column: -7 / -1;
     grid-template-columns: repeat(5, 70px);
-    border-left: 1px solid #1A5A4C;
+    border-left: 1px solid #1a5a4c;
     border-top: none;
     padding-top: 0;
   }
-
 
   &__first-collum {
     display: flex;
@@ -154,7 +147,7 @@
     row-gap: 20px;
 
     @include on-tablet {
-      grid-column:4 / 6;
+      grid-column: 4 / 6;
     }
   }
 
@@ -166,5 +159,4 @@
       text-decoration: underline;
     }
   }
-
 }
