--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,12 +9,12 @@
 .actual-events-section {
   @include max-width-cont;
   @include grid;
-  row-gap: 60px;
 
+  row-gap: 60px;
   padding-top: 70px;
+
   &__section-title {
     grid-column: 1 / -1;
-
     font-family: $second-font;
     font-size: $mob-sect-title-fs;
     text-align: center;
@@ -41,24 +41,23 @@
   }
 
   &__img {
+    @include transition;
+
     max-width: 280px;
     max-height: 210px;
     width: 100%;
     height: 100%;
 
-    @include transition;
-
     &:hover {
       transform: $main-transform-animation;
     }
-
 
     @include on-tablet {
       max-width: 700px;
       max-height: 520px;
     }
 
-    @include on-lap-top{
+    @include on-lap-top {
       max-width: 670px;
       max-height: 520px;
     }
@@ -95,6 +94,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 10px;
+
     @include on-tablet {
       padding-top: 15px;
     }
@@ -118,7 +118,6 @@
         width: 15px;
         height: 15px;
       }
-
     }
 
     @include on-tablet {
@@ -131,6 +130,7 @@
     line-height: 150%;
     color: #4e4e4e;
     margin-top: 15px;
+
     @include on-tablet {
       max-width: 460px;
     }
@@ -138,10 +138,10 @@
 }
 
 .lection-date-section {
-
   &__lection-date-cont {
     position: relative;
   }
+
   &__lection-img {
     max-width: 320px;
     width: 100%;
@@ -167,7 +167,6 @@
     left: 6%;
     max-width: 280px;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
-
     padding: 24px 0 20px;
 
     @include on-tablet {
@@ -187,6 +186,7 @@
   &__date-cont {
     display: flex;
     justify-content: space-around;
+
     @include on-tablet {
       gap: 185px;
       justify-content: flex-start;
@@ -224,13 +224,11 @@
       max-width: 370px;
     }
   }
-
 }
-
-
 
 .subscribe-section {
   position: relative;
+
   &__subscribe-cont {
     display: flex;
     flex-direction: column;
@@ -271,7 +269,6 @@
 
     @include on-tablet {
       font-size: $tab-sect-title-fs;
-
     }
   }
 
@@ -293,7 +290,6 @@
     @include on-lap-top {
       column-gap: 30px;
     }
-
   }
 
   &__email-input {
@@ -309,14 +305,14 @@
     @include on-lap-top {
       width: 470px;
     }
-
   }
 
   &__button-input {
+    @include transition;
+
     height: 50px;
     width: 50px;
-    background-color: #F14A27;
-    @include transition;
+    background-color: #f14a27;
 
     &:hover {
       background-color: gray;
@@ -329,7 +325,3 @@
     }
   }
 }
-
-
-
-
