--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,7 +17,6 @@
   }
 }
 
-
 @mixin max-width-cont() {
   max-width: 320px;
 
@@ -34,24 +33,20 @@
   transition: 0.35s ease;
 }
 
-
 @mixin grid() {
   display: grid;
-
   grid-template-columns: repeat($mobile-grid-collums, 130px);
   column-gap: 20px;
   padding-inline: 20px;
 
-  @include on-tablet() {
+  @media (min-width: 768px) {
     grid-template-columns: repeat($tablet-grid-collums, 90px);
     column-gap: 30px;
     padding-inline: 39px;
   }
 
-  @include on-lap-top() {
+  @media (min-width: 1280px) {
     grid-template-columns: repeat($pc-grid-collums, 70px);
     padding-inline: 55px;
   }
 }
-
-
