--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,4 +1,3 @@
-/* Указываем box sizing */
 *,
 *::before,
 *::after {
@@ -8,18 +7,29 @@
   border: 0;
 }
 
-:focus,:active {outline: none;}
-a:focus,a:active {outline: none;}
-nav,footer,header,aside {display: block;}
+:focus,
+:active {
+  outline: none;
+}
 
+a:focus,
+a:active {
+  outline: none;
+}
 
-/* Убираем внутренние отступы */
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
 ul[class],
 ol[class] {
   padding: 0;
+  list-style: none;
 }
 
-/* Выставляем основные настройки по-умолчанию для body */
 body {
   min-height: 100vh;
   scroll-behavior: smooth;
@@ -27,28 +37,13 @@ body {
   line-height: 1.5;
 }
 
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
-ul[class],
-ol[class] {
-  list-style: none;
-}
-
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-/* Указываем понятную периодичность в потоке данных у article*/
-article > * + * {
-  margin-top: 1em;
-}
-
-/* Наследуем шрифты для инпутов и кнопок */
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
-
-
