--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,35 +1,18 @@
-//font-family
-$main-font: "IBM Plex Sans", sans-serif;
-$second-font: "Montserrat", sans-serif;
-$third-font: "Roboto", sans-serif;
-
-// colors
+$main-font: 'IBM Plex Sans', sans-serif;
+$second-font: 'Montserrat', sans-serif;
+$third-font: 'Roboto', sans-serif;
 $main-color: #000;
 $second-color: #1a5a4c;
 $third-color: #fff;
-
-//font-size
 $mob-title-fs: 45 / 16 + em;
 $mob-sect-title-fs: 36 / 16 + em;
 $mob-sect-secondary-title-fs: 28 / 16 + em;
 $mob-main-text-fs: 1em;
-
 $tab-title-fs: 54 / 16 + em;
 $tab-sect-title-fs: 48 / 16 + em;
-
-
 $lap-title-fs: 72 / 16 + em;
-
-// tranformation
 $main-transform-animation: scale(1.2);
-
-// grid
 $mobile-grid-collums: 2;
 $tablet-grid-collums: 6;
 $pc-grid-collums: 12;
-
-
 $main-transform-animation: scale(1.1);
-
-
-
