--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -16,3 +16,4 @@ $subscribe-button-color: #f14a27;
 $subscribe-border-color: #0f0e08;
 $footer-text-color: #0f0e08;
 $footer-bg-color: #fff;
+$square-color: #f14a27;
