--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -6,7 +6,12 @@
 @import '/src/styles/elementStyles/main';
 @import '/src/styles/elementStyles/footer';
 
+html {
+  height: 100%;
+}
+
 body {
+  position: relative;
   background: $c-gray;
   margin: 0;
   padding: 0;
