--- a/src/styles/elementStyles/asaide.scss
+++ b/src/styles/elementStyles/asaide.scss
@@ -1,6 +1,7 @@
 .aside {
   background-color: $aside-bg-color;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
   overflow: hidden;
   pointer-events: none;
@@ -8,10 +9,15 @@
   transition:
     opacity 0.3s ease,
     left 0.3s ease;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: -100%;
   z-index: -1;
+
+  @include tablet {
+    display: flex;
+    flex-direction: row;
+  }
 
   &__open {
     left: 0;
@@ -27,9 +33,22 @@
   font-weight: 600;
   font-size: 14px;
 
+  @include tablet {
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+
   &--text {
     color: $footer-text-color;
     text-decoration: none;
+  }
+}
+
+.plan--tablet {
+  @include tablet {
+    margin-bottom: 0;
+    margin-top: 10px;
+    line-height: 1.4;
   }
 }
 
@@ -39,6 +58,11 @@
   font-weight: 900;
   color: $aside-text-color;
   font-size: 19px;
+
+  @include tablet {
+    margin-top: 28px;
+    font-size: 14px;
+  }
 
   &--text {
     color: $footer-text-color;
@@ -53,10 +77,15 @@
   box-sizing: border-box;
   padding-block: 24px;
   column-gap: 67px;
-
   width: 100%;
   height: auto;
 
+  @include tablet {
+    padding: 40px 18px 114px 34px;
+    width: 50%;
+    column-gap: 0;
+    height: 300px;
+  }
   &--footer {
     background-color: $footer-bg-color;
     padding-block: 40px;
@@ -84,6 +113,11 @@
     width: 24px;
     margin-top: 2px;
     margin-left: 20px;
+
+    @include tablet {
+      margin-left: 0;
+      margin-right: 64px;
+    }
   }
 
   &__galereyFoto {
@@ -91,6 +125,10 @@
     flex-direction: column;
     row-gap: 24px;
     width: 120px;
+
+    @include tablet {
+      margin-right: 20px;
+    }
 
     &--footer {
       width: 160px;
@@ -104,6 +142,10 @@
       font-size: 20px;
       line-height: 100%;
       width: 100%;
+
+      @include tablet {
+        font-size: 16px;
+      }
 
       &--text {
         color: $footer-text-color;
@@ -120,6 +162,12 @@
     height: 1px;
     width: calc(100% - 40px);
     background: $aside-text-color;
+
+    @include tablet {
+      inset: 40px auto 40px 0; // top right bottom left
+      width: 2px;
+      height: auto;
+    }
   }
 }
 
@@ -131,6 +179,24 @@
   height: 300px;
   box-sizing: border-box;
 
+  &__schedule {
+    @include tablet {
+      width: 160px;
+    }
+  }
+
+  &__information {
+    width: 144px;
+  }
+
+  @include tablet {
+    display: flex;
+    flex-direction: row;
+    padding-inline: 35px;
+    padding-block: 40px;
+    column-gap: 25px;
+  }
+
   &--footer {
     background-color: $footer-bg-color;
     padding-block: 0;
@@ -139,6 +205,13 @@
   &__planList {
     margin: 0;
     padding: 0;
+
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+      row-gap: 5px;
+    }
+
     &__workTime {
       color: $aside-text-color;
       font-family: 'IBM Plex Sans', serif;
