--- a/src/styles/elementStyles/main.scss
+++ b/src/styles/elementStyles/main.scss
@@ -15,6 +15,11 @@
   overflow: hidden;
   box-sizing: border-box;
 
+  @include tablet {
+    align-items: start;
+    padding-inline: 37px;
+  }
+
   &__title {
     width: 280px;
     height: 70px;
@@ -26,6 +31,15 @@
     text-align: center;
     margin-top: 70px;
     color: $museum-title-color;
+
+    @include tablet {
+      width: 460px;
+      height: 70px;
+      text-align: start;
+      font-size: 47px;
+      margin-top: 80px;
+      margin-bottom: 0;
+    }
   }
 
   &__article {
@@ -38,10 +52,128 @@
     width: 100%;
     height: auto;
 
+    @include tablet {
+      margin-top: 48px;
+      justify-content: start;
+      align-items: start;
+      margin-bottom: 0;
+    }
+
     &__img {
       width: 100%;
       margin-inline: 20px;
       margin-bottom: 20px;
+
+      @include tablet {
+        margin-inline: 0;
+        margin-bottom: 40px;
+      }
+    }
+
+    &__text {
+      display: flex;
+      flex-direction: row;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 150%;
+      color: $museum-title-color;
+      width: 100%;
+      justify-content: space-between;
+
+      @include tablet {
+        justify-content: start;
+      }
+
+      div:first-child {
+        font-weight: 500;
+        color: #687480;
+
+        @include tablet {
+          margin-right: 20px;
+        }
+      }
+    }
+
+    &__title {
+      width: 100%;
+      height: 40px;
+      /* stylelint-disable-next-line font-family-name-quotes */
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      text-align: center;
+      color: $museum-title-color;
+
+      @include tablet {
+        display: inline-flex;
+        text-align: start;
+        align-items: center;
+        font-size: 36px;
+        width: 460px;
+        gap: 20px;
+        margin-bottom: 15px;
+      }
+
+      &::after {
+        @include tablet {
+          content: '';
+          right: 0;
+          flex-shrink: 0;
+          width: 15px;
+          height: 15px;
+          background-color: $square-color;
+        }
+      }
+    }
+
+    &__discription {
+      width: 100%;
+      height: auto;
+      margin-block: 0;
+      margin-inline: auto;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 300;
+      font-size: 25px;
+      line-height: 150%;
+      color: $article-dc-color;
+
+      @include tablet {
+        width: 460px;
+        height: 72px;
+        margin-inline: 0;
+        margin-bottom: 12px;
+        font-size: 16px;
+      }
+    }
+  }
+
+  &__position {
+    position: relative;
+    margin-bottom: 100px;
+
+    &__div {
+      background-color: $c-gray;
+      border-bottom: 1px solid #1a5a4c40;
+      width: 280px;
+      height: 140px;
+      padding-block: 20px;
+      padding-inline: 15px;
+      position: absolute;
+      top: 174px;
+      left: 40px;
+
+      @include tablet {
+        width: 570px;
+        height: 205px;
+        padding-top: 45px;
+        padding-bottom: 50px;
+        padding-inline: 55px;
+        box-sizing: border-box;
+        top: 380px;
+        left: 60px;
+      }
     }
 
     &__text {
@@ -71,35 +203,15 @@
       line-height: 100%;
       text-align: center;
       color: $museum-title-color;
-    }
 
-    &__discription {
-      width: 100%;
-      height: auto;
-      margin-block: 0;
-      margin-inline: auto;
-      font-family: 'IBM Plex Sans', sans-serif;
-      font-weight: 300;
-      font-size: 25px;
-      line-height: 150%;
-      color: $article-dc-color;
-    }
-  }
-
-  &__position {
-    position: relative;
-    margin-bottom: 100px;
-
-    &__div {
-      background-color: $c-gray;
-      border-bottom: 1px solid #1a5a4c40;
-      width: 280px;
-      height: 140px;
-      padding-block: 20px;
-      padding-inline: 15px;
-      position: absolute;
-      top: 174px;
-      left: 40px;
+      @include tablet {
+        text-align: start;
+        font-size: 36px;
+        width: 460px;
+        height: 72px;
+        margin-bottom: 0;
+        margin-top: 23px;
+      }
     }
   }
 }
@@ -115,9 +227,13 @@
   overflow: hidden;
   box-sizing: border-box;
 
+  @include tablet {
+    align-items: start;
+  }
+
   &__title {
     width: 280px;
-    height: 70px;
+    height: 36px;
     /* stylelint-disable-next-line font-family-name-quotes */
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -127,6 +243,12 @@
     margin-top: 70px;
     margin-bottom: 0;
     color: $museum-title-color;
+
+    @include tablet {
+      width: 340px;
+      height: 48px;
+      text-align: start;
+    }
   }
 
   &__content {
@@ -156,33 +278,8 @@
     max-width: 100%;
     opacity: 1;
     transition: opacity 0.4s ease;
-
-    &--unactive {
-      max-width: 100%;
-      box-sizing: border-box;
-      opacity: 0;
-      pointer-events: none;
-      position: absolute;
-    }
-  }
-
-  &__dots {
-    display: flex;
-    justify-content: center;
-    gap: 22px;
-    margin-top: 20px;
-
-    &__dot {
-      width: 9px;
-      height: 9px;
-      border-radius: 50%;
-      background-color: $dots-color;
-      transition: background-color 0.3s ease;
-
-      &--active {
-        background-color: $dots-color-activ;
-      }
-    }
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -263,5 +360,38 @@
       width: 18px;
       height: 18px;
     }
+  }
+}
+
+.swiper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.swiper-slide {
+  width: 340px;
+  height: 545px; // или 100%, зависит от желаемого эффекта
+  flex-shrink: 0;
+}
+
+.swiper-pagination {
+  display: flex;
+  justify-content: center;
+  gap: 22px;
+  margin-top: 20px;
+
+  &-bullet {
+    width: 20px;
+    height: 20px;
+    background-color: $dots-color !important;
+    border-radius: 50%;
+    margin: 0 5px;
+    opacity: 0.6;
+    transition: background-color 0.3s;
+  }
+
+  &-bullet-active {
+    background-color: $dots-color-activ !important;
+    opacity: 1;
   }
 }
