for check slider

--- a/src/styles/elementStyles/asaide.scss
+++ b/src/styles/elementStyles/asaide.scss
@@ -164,7 +164,7 @@
     background: $aside-text-color;
 
     @include tablet {
-      inset: 40px auto 40px 0; // top right bottom left
+      inset: 40px auto 40px 0;
       width: 2px;
       height: auto;
     }
