--- a/src/styles/elementStyles/main.scss
+++ b/src/styles/elementStyles/main.scss
@@ -260,6 +260,11 @@
     height: auto;
     margin-top: 40px;
     margin-bottom: 100px;
+
+    @include tablet {
+      align-items: start;
+      justify-content: start;
+    }
   }
 
   &__slider {
@@ -271,6 +276,7 @@
     box-sizing: border-box;
     overflow: hidden;
     position: relative;
+    margin-inline: 0;
   }
 
   &__slider-img {
@@ -280,6 +286,13 @@
     transition: opacity 0.4s ease;
     height: 100%;
     width: 100%;
+
+    @include tablet {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
@@ -364,14 +377,16 @@
 }
 
 .swiper {
-  width: 100%;
-  overflow: hidden;
+  width: 340px;
+  height: 100%;
+  overflow: visible;
 }
 
 .swiper-slide {
-  width: 340px;
+  width: 345px !important;
   height: 545px; // или 100%, зависит от желаемого эффекта
   flex-shrink: 0;
+  display: flex;
 }
 
 .swiper-pagination {
