add task for testing ver. 1.04

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -17,6 +17,7 @@
   scroll-behavior: smooth;
   padding-bottom: 173px;
 
+
   &__menu {
     position: fixed;
     top: 0;
@@ -36,5 +37,6 @@
 
   &:has(.page-body__menu:target) {
     overflow: hidden;
+    background-color: rgba($color: #fff, $alpha: 0.58);
   }
 }
