--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -62,5 +62,14 @@
       flex-wrap: wrap;
       grid-column: 1 / -1;
     }
+
+  }
+
+  &__pc-slide {
+    @include transition;
+
+    &:hover {
+      transform: $main-transform-animation;
+    }
   }
 }
