--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -138,33 +138,22 @@
 }
 
 .lection-date-section {
-  &__lection-date-cont {
-    position: relative;
-  }
 
   &__lection-img {
-    max-width: 320px;
     width: 100%;
     height: 100%;
 
-    @include on-tablet {
-      max-width: 768px;
-    }
-
-    @include on-lap-top {
-      max-width: 1280px;
-    }
   }
 
   &__lection-cont {
-    position: absolute;
+    position: relative;
+    bottom: 80px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     gap: 15px;
     background-color: $third-color;
-    top: 60%;
-    left: 6%;
     max-width: 280px;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
     padding: 24px 0 20px;
@@ -172,14 +161,10 @@
     @include on-tablet {
       max-width: 570px;
       padding: 45px 55px;
-      left: 13%;
-      top: 65%;
     }
 
     @include on-lap-top {
       padding: 50px 100px;
-      left: 28%;
-      top: 76%;
     }
   }
 
