add task for testing ver. 1.05

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -140,7 +140,7 @@
 .lection-date-section {
 
   &__lection-img {
-    width: 100%;
+    width: 100vw;
     height: 100%;
 
   }
@@ -213,6 +213,10 @@
 
 .subscribe-section {
   position: relative;
+
+  &__cover-img {
+    width: 100vw;
+  }
 
   &__subscribe-cont {
     display: flex;
