--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  font-size: 14px;
   @include on-lap-top {
     padding-top: 47px;
   }
@@ -66,7 +66,6 @@
   &__contacts-cont {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
 
     grid-column: 2 / 3;
 
@@ -82,6 +81,7 @@
   &__contacts-title {
     font-weight: 400;
     font-size: 14px;
+    margin-bottom: 20px;
   }
 
   &__contacts-address,
@@ -124,7 +124,7 @@
   padding-inline: 0 !important;
 
   @include on-lap-top {
-    grid-column: -7 / -1;
+    grid-column: -6 / -1;
     grid-template-columns: repeat(5, 70px);
     border-left: 1px solid #1a5a4c;
     border-top: none;
@@ -154,7 +154,6 @@
   &__nav-link {
     text-decoration: none;
     color: $main-color;
-
     &:hover {
       text-decoration: underline;
     }
