Add carousel and gallery styles
- Implemented styles for the carousel component, including layout, image handling, and pagination.
- Created styles for the gallery component, enhancing grid layout and responsiveness across different devices.

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -17,3 +17,4 @@ $menu-text-color: #fff;
 $card-dates-color: #1A5A4C;
 $card-additional-element-color: #F14A27;
 $card-lecture-bg-color: #fff;
+$carousel-pagination-active-color: #1A5A4C;
