--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -18,8 +18,12 @@
 %h2 {
   font-family: Montserrat, Roboto, sans-serif;
   font-weight: 700;
-  font-size: 2.4rem;
+  font-size: 2.25rem;
   line-height: 100%;
+
+  @include on-tablet {
+    font-size: 3rem;
+  }
 }
 
 %h3 {
