--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,8 +1,9 @@
 .icon {
   display: block;
-  width: 24px;
+  min-width: 24px;
   height: 24px;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 
   &--burger {
     background-image: url(../images/icons/burger-menu.png);
