--- a/src/styles/blocks/section-button.scss
+++ b/src/styles/blocks/section-button.scss
@@ -21,8 +21,9 @@
     background-repeat: no-repeat;
     background-size: 24px 24px;
     background-position: center;
-    top: 0;
-    right: -51px;
+    top: -1px;
+    right: 0;
+    transform: translateX(100%);
     background-color: $button-border-color;
   }
 
@@ -33,7 +34,6 @@
     &::after {
       width: 71px;
       height: 71px;
-      right: -70px;
     }
   }
 
