--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,13 +8,16 @@ $large-desktop-min-width: 1440px;
 $root-font-size: 16px;
 
 // colors
-$main-text-color: #0F0E08;
-$card-text-color: #4E4E4E;
+$main-text-color: #0f0e08;
+$card-text-color: #4e4e4e;
 $c-gray: #eee;
 $button-border-color: #1a5a4c;
 $menu-bg-color: #1a5a4c;
 $menu-text-color: #fff;
-$card-dates-color: #1A5A4C;
-$card-additional-element-color: #F14A27;
+$card-dates-color: #1a5a4c;
+$card-additional-element-color: #f14a27;
 $card-lecture-bg-color: #fff;
-$carousel-pagination-active-color: #1A5A4C;
+$carousel-pagination-active-color: #1a5a4c;
+$subscription-text-color: #fff;
+$subscription-input-text-color: #687480;
+$subscription-additional-element-color: #f14a27;
