--- a/src/styles/blocks/carousel.scss
+++ b/src/styles/blocks/carousel.scss
@@ -40,6 +40,8 @@
     @include on-desktop {
       width: fit-content;
       max-width: 100%;
+
+      @include hover(transform, scale(1.05));
     }
   }
 
